[package]
name = "liquidrust"
version = "0.0.7"
edition = "2021"
authors = ["EriksRemess"]
description = "Liquid temperature checker for Corsair H115iRGBPROXT"
license = "MIT"
repository = "https://github.com/EriksRemess/liquidrust"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
hidapi = "2.6.3"
rand = "0.8.5"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"

[profile.release]
strip = true
