[package]
name = "liquidrust"
version = "0.2.1"
edition = "2021"
authors = ["EriksRemess"]
description = "A simple Rust application for displaying information and setting RGB colors for the Corsair H115i RGB PRO XT AIO."
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/EriksRemess/liquidrust"
homepage = "https://github.com/EriksRemess/liquidrust"
keywords = ["corsair", "rgb", "liquid", "cooling", "monitoring"]
categories = ["command-line-utilities", "hardware-support"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "Readme.md",
]

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
hidapi = "2.6.3"
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"

[profile.release]
strip = true
